--- a/package.json
+++ b/package.json
@@ -1,9 +1,7 @@
 {
-  "name": "push-notifications-server-codelab-incomplete",
+  "name": "web-push-api-demo",
   "version": "1.0.0",
   "description": "Codelab: Build a push notifications client",
-  "main": "server.js",
-  ""
   "scripts": {
     "clean": "[ -e .data/db.json ] && rm .data/db.json",
     "start": "vite",
